--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^15.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
