--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.5",
     "html-webpack-plugin": "^4.2.0",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3",
@@ -24,6 +25,7 @@
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2"
   }
 }
