--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.5",
     "html-webpack-plugin": "^4.2.0",
     "ts-loader": "^7.0.0",
+    "tslint": "^6.1.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
